# BlockCAD_Remake

./: .gitattributes  .gitignore  compuerta_riego.blockcad
engine/: Documentacion_Tecnica_BlockCAD.docx  Documentacion_Tecnica_BlockCAD_Engine_Paso_1.docx  README.md  pyproject.toml  ~$cumentacion_Tecnica_BlockCAD.docx
engine/blockcad_engine/: __init__.py  catalogos.py  cli.py  commands.py  dsl.py  editor.py  errors.py  geometry.py  history.py  model.py  parts.py  serialization.py
engine/blockcad_engine/datos/: catalogo_45300.json
engine/blockcad_web/: __init__.py  __main__.py  index.html  server.py
engine/docs/: bloques_wedo.md  camion_reciclaje.blockcad  patrones_wedo.md
engine/docs/historico/: LEEME.md
engine/herramientas/: generar_catalogo.py  generar_mallas.py  ldraw.py
engine/tests/: test_catalogo.py  test_catalogos.py  test_cli.py  test_commands.py  test_conexiones.py  test_dsl.py  test_engine.py  test_engranajes.py  test_errors.py  test_insercion.py  test_ldraw.py  test_mallas.py  test_studs.py  test_web.py
