[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blockcad-engine"
version = "0.7.0"
description = "Editor de LEGO Technic y WeDo 2.0 con lenguaje textual y vista 3D"
requires-python = ">=3.11"
authors = [{name = "BlockCAD Remake"}]
license = {text = "GPL-2.0-or-later"}

[project.scripts]
blockcad-demo = "blockcad_engine.cli:main"
blockcad-web = "blockcad_web.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blockcad_engine*", "blockcad_web*"]

[tool.setuptools.package-data]
# Sin esto el paquete instalado no lleva Three.js y el visor 3D se queda a
# oscuras: los archivos que no son .py hay que declararlos uno a uno.
# LICENSE-three.txt no es opcional: la CC BY 4.0 exige que la atribución
# viaje con el código.
blockcad_web = ["index.html", "vendor/*"]
blockcad_engine = ["datos/*.json"]
